# PilotStuff

./: .gitignore  CMakeLists.txt  README.md  main.cpp  personal_gui.cpp  pilot1_sequence.cpp  pilot1_simultaneous.cpp
Data/: 2021-09-21_14.31.29.csv  921B_piloting.csv  921C_piloting.csv  921D_piloting.csv  921E_piloting.csv  921E_piloting_analyzing.xlsx  921F_piloting.csv  921G_piloting.csv  921H_piloting.csv  921I_piloting.csv  921J_piloting.csv  927B_EM_piloting.csv  927C_EM_piloting.csv  927D_EM_piloting.csv  hello_piloting.csv
include/: Chord.hpp  Note.hpp  notes_info.hpp
src/: Chord.cpp  Note.cpp  personal_gui.cpp  pilot2_seqsim.cpp  pilot2_twosignals.cpp
